--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "formidable": "^1.1.1",
     "friendly-errors-webpack-plugin": "1.6.1",
     "ftp-deploy": "1.2.2",
     "function-bind": "1.1.1",
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.4",
     "inquirer": "4.0.1",
+    "jquery": "^3.3.1",
     "json-loader": "0.5.7",
     "less": "2.7.3",
     "less-loader": "4.0.5",
