--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "hammerjs": "2.0.8",
     "lodash": "4.17.4",
     "mint-ui": "2.2.12",
-    "multer": "^1.3.0",
     "photoswipe": "4.1.2",
     "vue": "2.5.9",
     "vue-awesome-swiper": "3.0.4",
+    "vue-router": "3.0.1",
     "vuex": "3.0.1",
     "vux": "2.7.4"
   },
@@ -50,6 +50,7 @@
     "babel-register": "6.26.0",
     "babel-runtime": "6.26.0",
     "chalk": "2.3.0",
+    "chromedriver": "2.33.2",
     "connect-history-api-fallback": "1.5.0",
     "copy-webpack-plugin": "4.2.3",
     "cross-env": "5.1.1",
@@ -68,6 +69,7 @@
     "file-loader": "1.1.5",
     "formidable": "^1.1.1",
     "friendly-errors-webpack-plugin": "1.6.1",
+    "ftp-deploy": "1.2.2",
     "function-bind": "1.1.1",
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.4",
@@ -76,12 +78,17 @@
     "json-loader": "0.5.7",
     "less": "2.7.3",
     "less-loader": "4.0.5",
+    "multer": "^1.3.0",
+    "multiparty": "^4.1.3",
+    "nightwatch": "0.9.16",
     "node-sass": "4.7.2",
     "opn": "5.1.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
+    "selenium-server": "3.8.1",
+    "semver": "5.4.1",
     "shelljs": "0.7.8",
     "url-loader": "0.6.2",
     "vue-hot-reload-api": "2.2.4",
