--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "echarts": "3.8.5",
+    "element-ui": "^2.2.1",
     "es6-promise": "4.1.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.4",
@@ -42,7 +43,7 @@
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
     "babel-loader": "7.1.2",
-    "babel-plugin-component": "0.10.1",
+    "babel-plugin-component": "^0.10.1",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
